# RL_mastery

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
projects/phase1_TD_q_learning/: 10-armed-testbed-gpt5-nonstationary.ipynb  10-armed-testbed-gpt5.ipynb  bandit_problem.py
projects/phase1_q_learning/: 10-armed-testbed-gpt5-gradient.ipynb  10-armed-testbed-gpt5-ucb.ipynb  10-armed-testbed-gpt5.ipynb  10-armed-testbed-sami.ipynb  bandit_problem.py
projects/phase1_q_learning/cartpole/: dqn-cartpole.ipynb
projects/phase2_dqn_ppo/reinforcement_learning_sutton_barto/: monte-carlo-ex-5_12_racetrack.ipynb  policy-iteration-ex-4_1.ipynb  policy-iteration-ex-4_1_deterministic_policy.ipynb  policy-iteration-ex-4_1_single_optimal_action.ipynb  policy-iteration-ex-4_1_stochastic_policy.ipynb  policy-iteration-ex-4_7_jacks_car_rental_original.ipynb  qlearning-windy-gridworld-with-kings-moves_2.ipynb  qlearning-windy-gridworld.ipynb  (+2 more)
projects/reinforcement_learning_sutton_barto/: n-step-TD-randomwalk-using-n-step-error-chatgpt.ipynb  n-step-TD-randomwalk-using-n-step-error.ipynb  policy-iteration-ex-4_1_stochastic_policy.ipynb  policy-iteration-ex-4_7_jacks_car_rental_original.ipynb  policy-iteration-ex-4_7_jacks_car_rental_original_vectorized_claude.ipynb  qlearning-windy-gridworld-with-kings-moves_2.ipynb  qlearning-windy-gridworld.ipynb  sarsa-windy-gridworld-with-kings-moves-stochastic.ipynb  sarsa-windy-gridworld-with-kings-moves.ipynb  sarsa-windy-gridworld-with-kings-moves_2.ipynb  sarsa-windy-gridworld.ipynb  value-iteration-ex-4_9_gamblers_problem.ipynb
(+1 files in other folders)
