[project]
name = "rl-mastery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "gymnasium[box2d]>=1.2.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "stable-baselines3[extra]>=2.7.0",
    "swig>=4.3.1",
    "wandb>=0.21.1",
]
